--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recoil": "^0.3.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
