--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
+    "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.0",
     "antd": "^4.16.7",
     "graphql": "^15.5.1",
-    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "recoil": "^0.3.1",
+    "sass": "^1.36.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
