fix: chage hash router * add homepage path

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "notedly",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/notedly/",
   "dependencies": {
     "@apollo/client": "^3.3.21",
     "lodash": "^4.17.21",
